feat: Puchi can shoot rays

--- a/index.html
+++ b/index.html
@@ -8,14 +8,12 @@
 </head>
 <body>
 <div id="galaxy">
-
-</div>
 <div id="gameContainer">
     <button id="startButton">Inicio</button>
     <canvas id="gameCanvas"></canvas>
 </div>
-
-<script src="js/galaxy.js"></script>
+</div>
+<script type="module" src="js/Galaxy.js"></script>
 <script type="module" src="js/Game.js"></script>
 </body>
 </html>
