fix: Remove 0 from scorePanel. Let JS do it for HTML

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div id="gameContainer">
         <canvas id="gameCanvas"></canvas>
         <button id="startButton">Inicio</button>
-        <div id="scorePanel">Score: <span id="score">0</span></div>
+        <div id="scorePanel">Score: <span id="score"></span></div>
     </div>
 </div>
 <script type="module" src="js/Galaxy.js"></script>
