--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <div id="galaxy">
     <div id="gameContainer">
-        <canvas id="gameCanvas"></canvas>
+        <canvas id="gameCanvas" width="100%" height="100%"></canvas>
         <div id="gameOverContainer" style="display: none;">
             <img id="gameOverImage" src="images/game-over-puchi-1.png" alt="Game Over" />
             <button class="game-button" id="restartButton">Volver a empezar</button>
