--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
 <div id="galaxy">
     <div id="gameContainer">
+        <div id="shotsLeft">Disparos: <span id="shotsLeftCount">50</span></div>
         <canvas id="gameCanvas" width="100%" height="100%"></canvas>
         <div id="gameOverContainer" style="display: none;">
             <img id="gameOverImage" src="images/game-over-puchi-1.png" alt="Game Over" />
