replace(image): Puchi gameover background optimized and clean

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="shotsLeft">Disparos: <span id="shotsLeftCount">50</span></div>
         <canvas id="gameCanvas" width="100%" height="100%"></canvas>
         <div id="gameOverContainer" style="display: none;">
-            <img id="gameOverImage" src="images/game-over-puchi-1.png" alt="Game Over" />
+            <img id="gameOverImage" src="images/game-over-puchi.png" alt="Game Over" />
             <button class="game-button" id="restartButton">Volver a empezar</button>
         </div>
         <button class="game-button" id="startButton">Inicio</button>
