feat: Bit refactor Galaxy, adding two new classes: Star, ShootingStar. Add gameConfig global variable. Added debugMode

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div id="scorePanel">Score: <span id="score"></span></div>
     </div>
 </div>
-<script type="module" src="js/Galaxy.js"></script>
+<script type="application/javascript" src="js/GameConfig.js"></script>
 <script type="module" src="js/Game.js"></script>
 </body>
 </html>
