--- a/index.html
+++ b/index.html
@@ -12,12 +12,17 @@
     <div id="gameContainer">
         <div id="shotsLeft">Disparos: <span id="shotsLeftCount">50</span></div>
         <canvas id="gameCanvas" width="100%" height="100%"></canvas>
+        <div id="scorePanel">Score: <span id="score"></span></div>
         <div id="gameOverContainer" style="display: none;">
             <img id="gameOverImage" src="images/game-over-puchi.png" alt="Game Over"/>
             <button class="game-button game-blue-button" id="restartButton">Volver a empezar</button>
+            <p class="p-white-start-p2">Introduce tus iniciales:</p>
+            <input type="text" id="playerInitials" maxlength="3" />
+            <button id="saveScoreButton">Guardar</button>
+            <h3>Ranking</h3>
+            <ol id="scoreList"></ol>
         </div>
         <button class="game-button game-blue-button center-button" id="startButton">Inicio</button>
-        <div id="scorePanel">Score: <span id="score"></span></div>
     </div>
 </div>
 <!-- Enlace en el Popup de Cookies -->
@@ -41,5 +46,9 @@
 <script async type="application/javascript" src="js/CookieLegal.js"></script>
 <script type="application/javascript" src="js/GameConfig.js"></script>
 <script type="module" src="js/Game.js"></script>
+<script type="module" src="js/RankingManager.js"></script>
+<!-- Agrega Firebase SDKs y Firebase Initialization aquí -->
+<script async src="https://www.gstatic.com/firebasejs/8.6.8/firebase-app.js"></script>
+<script async src="https://www.gstatic.com/firebasejs/8.6.8/firebase-firestore.js"></script>
 </body>
 </html>
